# infrablockchain-antelope

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  IMPORTANT.md  LICENSE  README.md  eosio_build.sh  eosio_mirror.md  infrablockchain_build.sh  infrablockchain_install.sh  infrablockchain_uninstall.sh  roadmap.md  testnet.template  yosemite_build.sh  yosemite_install.sh  yosemite_uninstall.sh
.buildkite/: coverage.yml  debug.yml  long_running_tests.yml  pipeline.yml
CMakeModules/: EosioTester.cmake.in  EosioTesterBuild.cmake.in  installer.cmake
Docker/: Dockerfile  README.md  clyos.sh  config.ini  docker-compose-latest.yml  docker-compose.yml  infra-cli.sh  infra-node.sh  yosemited.sh
contracts/: CMakeLists.txt
contracts/allcamper.akrw.token/: CMakeLists.txt  allcamper.akrw.token.cpp  allcamper.akrw.token.hpp
contracts/allcamper.contract/: CMakeLists.txt  allcamper.contract.abi  allcamper.contract.cpp  allcamper.contract.hpp
contracts/allcamper.test.trxs/: allcamper_local_testnet_transaction_examples.sh  allcamper_node_transaction_examples.sh
contracts/asserter/: asserter.cpp
contracts/eosiolib/: CMakeLists.txt  contract.hpp  dispatcher.hpp  symbol.hpp  yx_asset.hpp  yx_fee.hpp  yx_kyc.hpp  yx_sequence_generator.hpp  yx_symbol.hpp
contracts/infrablockchainlib/: CMakeLists.txt  identity.hpp  identity_authority.hpp  infrablockchainlib.cpp  native_token.hpp  native_token_symbol.hpp.in  number.hpp  system_accounts.hpp  system_token_api.h  token.hpp  token_api.h  transaction_fee.hpp  transaction_vote.h  trx_fee_api.h  yx_asset.hpp  yx_contract.hpp  yx_symbol.hpp
contracts/infrasys/: CMakeLists.txt  README.md  infrasys.abi  infrasys.block_producer.cpp  infrasys.cpp  infrasys.hpp  infrasys.identity_authority.cpp  infrasys.native.hpp  infrasys.system_token.cpp  infrasys.transaction_fee.cpp
contracts/sys.identity/: CMakeLists.txt  README.md  sys.identity.cpp  sys.identity.hpp
contracts/sys.tokenabi/: CMakeLists.txt  sys.tokenabi.cpp  sys.tokenabi.hpp
contracts/sys.txfee/: CMakeLists.txt  README.md  sys.txfee.cpp  sys.txfee.hpp
contracts/test_api/: test_action.cpp  test_api.cpp
contracts/yosemite.card.ytoken/: CMakeLists.txt  yosemite.card.ytoken.abi  yosemite.card.ytoken.cpp  yosemite.card.ytoken.hpp  yosemite_card_ytoken_sample_transactions.sh  yosemite_card_ytoken_sample_transactions_testnet.sh
contracts/yosemitelib/: CMakeLists.txt  delegated_trx_fee_payment.h  hash_fnv1a.hpp  identity.hpp  identity_authority.hpp  native_token.hpp  native_token_symbol.hpp  native_token_symbol.hpp.in  non_native_token.hpp  sequence_generator.hpp  system_accounts.hpp  system_depository.hpp  system_token_api.h  token.hpp  token_api.h  transaction_fee.hpp  transaction_vote.h  trx_fee_api.h  trx_fee_payer.h  yosemitelib.cpp  yx_asset.hpp  yx_contract.hpp  yx_kyc.hpp  yx_sequence_generator.hpp  yx_symbol.hpp
contracts/yosemitex.credit.token/: CMakeLists.txt  yosemitex.credit.token.abi  yosemitex.credit.token.cpp  yosemitex.credit.token.hpp
contracts/yosemitex.fiat.stable.token/: CMakeLists.txt  yosemitex.fiat.stable.token.cpp  yosemitex.fiat.stable.token.hpp
contracts/yx.auction/: CMakeLists.txt  yx.auction.abi  yx.auction.cpp  yx.auction.hpp
contracts/yx.dcontract/: CMakeLists.txt  README.md  yx.dcontract.abi  yx.dcontract.cpp  yx.dcontract.hpp
contracts/yx.escrow/: CMakeLists.txt  README.md  yx.escrow.abi  yx.escrow.cpp  yx.escrow.hpp
contracts/yx.feedist/: CMakeLists.txt  README.md  yx.feedist.abi  yx.feedist.cpp  yx.feedist.hpp
contracts/yx.fiat.stable.token/: CMakeLists.txt  yx.fiat.stable.token.abi  yx.fiat.stable.token.cpp  yx.fiat.stable.token.hpp
contracts/yx.identity/: CMakeLists.txt  README.md  yx.identity.abi  yx.identity.cpp  yx.identity.hpp
contracts/yx.kyc/: CMakeLists.txt  README.md  yx.kyc.abi  yx.kyc.cpp  yx.kyc.hpp
contracts/yx.nft/: CMakeLists.txt  README.md  yx.nft.abi  yx.nft.cpp  yx.nft.hpp
contracts/yx.nftauct/: CMakeLists.txt  README.md  yx.nftauct.abi  yx.nftauct.cpp  yx.nftauct.hpp
contracts/yx.nftex/: CMakeLists.txt  README.md  yx.nftex.abi  yx.nftex.cpp  yx.nftex.hpp
contracts/yx.ntoken/: CMakeLists.txt  README.md  yx.ntoken.abi  yx.ntoken.cpp  yx.ntoken.hpp
contracts/yx.system/: CMakeLists.txt  README.md  yx.block_producer.cpp  yx.identity_authority.cpp  yx.native.hpp  yx.sys_depository.cpp  yx.system.abi  yx.system.cpp  yx.system.hpp  yx.system_token.cpp  yx.transaction_fee.cpp
contracts/yx.token/: CMakeLists.txt  README.md  yx.token.abi  yx.token.cpp  yx.token.hpp
contracts/yx.tokenabi/: CMakeLists.txt  yx.tokenabi.abi  yx.tokenabi.cpp  yx.tokenabi.hpp
contracts/yx.txfee/: CMakeLists.txt  README.md  yx.txfee.abi  yx.txfee.cpp  yx.txfee.hpp
debian/: postinst
infrablockchain-bios/: .local_infrablockchain_env_vars  commands.txt  infra-cli-features.txt  infrablockchain_bios_local_testnet.sh  local_testnet_boot_bios_infrablockchain.sh  local_testnet_start_infrablockchain_node.sh  local_testnet_stop_infrablockchain_node.sh  start_infrablockchain_testnet_node_local.sh  stop_infrablockchain_testnet_node_local.sh
infrablockchain_bios/: infrablockchain_bios_testnet_permissioned.md  reset_std_token_infrablockchain_testnet_on_server_side.sh  start_infrablockchain_testnet_node.sh  stop_infrablockchain_testnet_node.sh
infrablockchain_config/: config_infrablockchain_testnet_boot.ini  genesis_infrablockchain_testnet.json
infrablockchain_docs/: yosemite_crypto_support.md
plugins/: CMakeLists.txt
plugins/event_notification_plugin/: CMakeLists.txt  README.md  event_notification_plugin.cpp
plugins/event_notification_plugin/include/eosio/event_notification_plugin/: event_notification_plugin.hpp
plugins/trace_api_plugin/utils/: CMakeLists.txt
programs/: CMakeLists.txt
programs/eosio-abigen/: CMakeLists.txt
programs/eosio-blocklog/: CMakeLists.txt  main.cpp
scripts/: .build_vars  .environment  abigen.sh  eosio-tn_bounce.sh  eosio-tn_up.sh  eosio_build_darwin.sh  infrablockchain_build.sh  infrablockchain_build_amazonlinux.sh  infrablockchain_build_centos.sh  infrablockchain_build_darwin.sh  (+4 more)
(+190 files in other folders)
