add_executable( ${BLOCK_LOG_EXECUTABLE_NAME} main.cpp )

if( UNIX AND NOT APPLE )
  set(rt_library rt )
endif()

target_include_directories(${BLOCK_LOG_EXECUTABLE_NAME} PUBLIC ${CMAKE_CURRENT_BINARY_DIR})

target_link_libraries( ${BLOCK_LOG_EXECUTABLE_NAME}
        PRIVATE appbase
        PRIVATE eosio_chain fc state_history ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )

copy_bin( ${BLOCK_LOG_EXECUTABLE_NAME} )
install( TARGETS
   ${BLOCK_LOG_EXECUTABLE_NAME}

   COMPONENT base

   RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
   LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
)
